# Ahorrando-Ando

./: .gitignore  ESTADO_PROYECTO.md  Key  TESTING.md  docker-compose.prod.yml  package-lock.json
apps/backend/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 6cf5366204ef_initial_schema.py  86346ea3e929_add_audit_logs_table.py  a172b4bf3424_hashed_password_nullable_usuarios_de_.py  a7b8c9d0e1f2_add_transactions.py  c4f812a9d001_add_price_alerts_and_push_subscriptions.py  d5e1b2c3a4f0_add_integration_sync_status.py  e6f2a3b4c5d1_add_provider_snapshots.py  f1a2b3c4d5e6_add_indexes_user_id.py
apps/backend/scripts/: backup_db.py  gmail_refresh_token.py  rotate_encryption_key.py  seed_demo.py
apps/backend/src/application/ports/: i_cache_service.py  i_encryption_service.py  i_financial_provider.py  i_notification_service.py  i_price_service.py  i_push_service.py  i_token_blacklist_service.py
apps/backend/src/application/services/: audit_service.py
apps/backend/src/domain/entities/: audit_log.py  holding.py  integration.py  portfolio.py  price_alert.py  provider_snapshot.py  push_subscription.py  transaction.py  user.py
apps/backend/src/domain/repositories/: i_audit_log_repository.py  i_integration_repository.py  i_portfolio_snapshot_repository.py  i_price_alert_repository.py  i_provider_snapshot_repository.py  (+3 more)
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: conftest.py  test_alerts_flow.py  test_auth_flow.py
(+274 files in other folders)
