[tool.poetry]
name = "ahorrando-ando-backend"
version = "0.1.0"
description = "Backend de Ahorrando Ando — agregador de portfolio financiero"
authors = ["Rocco Moreno"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.13.0"
redis = {version = ">=5.0.0", extras = ["asyncio"]}
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^42.0.0"
dependency-injector = "^4.41.0"
tenacity = "^8.3.0"
python-dotenv = "^1.0.0"
sentry-sdk = {version = "^2.0.0", extras = ["fastapi"], optional = true}
bcrypt = "^4.0.0"

[tool.poetry.extras]
monitoring = ["sentry-sdk"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
httpx = "^0.27.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
